# platinum-ui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  platinum.css
.github/workflows/: ci.yml
build-helper/: Cargo.toml
build-helper/src/: lib.rs
fonts/: LICENSE-arimo.txt  LICENSE-cousine.txt
showcase/: Cargo.toml  build.rs  index.html
showcase-server/: Cargo.toml
showcase-server/src/: main.rs
showcase/src/: main.rs  sections.rs
src/: dark_mode.rs  debounce_button.rs  lib.rs  platinum_info.rs  platinum_meter.rs  platinum_scroll.rs  platinum_select.rs  platinum_shell.rs  platinum_sidebar.rs  ui_button.rs  ui_collapsible.rs  ui_dialog.rs
tests/: utility_coverage.rs
