[package]
name = "platinum-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Mac OS Platinum-styled Leptos component library: buttons, dialog, collapsible, popup select, debounced button, scrollbar/scroll well. Ships with platinum.css; the consumer provides Tailwind and adds this crate's src to its @source scan."
repository = "https://github.com/joseph-x-li/platinum-ui"
readme = "README.md"
license = "MIT"
# The bundled fonts/ are Apache-2.0 (Arimo/Cousine); their LICENSE files ship
# with the crate.

# Standalone workspace root — also keeps cargo from attaching this crate to a
# parent workspace when it's checked out as a submodule inside another repo.
[workspace]

[build-dependencies]
# Pure-Rust Tailwind v4-compatible generator: build.rs compiles the utility
# classes the components emit, so consumers need no Node/Tailwind toolchain.
encre-css = "0.20"

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "=0.3.98"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"
web-sys = { version = "=0.3.98", features = ["DomRect", "Element", "HtmlButtonElement", "ResizeObserver", "WheelEvent"] }
