[package]
name = "platinum-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Mac OS Platinum-styled design system for Leptos: buttons, dialog, collapsible, popup select, debounced button, scrollbar/scroll well, sidebar, textarea. Mount PlatinumStyles once; generate app utilities with platinum-ui-build. No Tailwind/Node toolchain."
repository = "https://github.com/joseph-x-li/platinum-ui"
readme = "README.md"
license = "MIT"
# The bundled fonts/ are Apache-2.0 (Arimo/Cousine); their LICENSE files ship
# with the crate.

# Workspace root (also keeps cargo from attaching this crate to a parent
# workspace when it's checked out as a submodule inside another repo). The
# members are the shared build-script helper, plus the component showcase: a
# Trunk-built Leptos app and the tiny static server that hosts its dist/.
[workspace]
members = ["build-helper", "showcase", "showcase-server"]

[build-dependencies]
# Shared encre-css configuration (token registry, preflight, font stacks) —
# the same crate every app's build.rs uses; see build-helper/src/lib.rs.
platinum-ui-build = { path = "build-helper" }

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "=0.3.98"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"
web-sys = { version = "=0.3.98", features = ["DomRect", "Element", "HtmlButtonElement", "ResizeObserver", "VisualViewport", "WheelEvent"] }
